Fixed scrollbar issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -88,7 +88,17 @@ a, .btn {
     }
 }
 body.nav-open {
-    // overflow: hidden;
+    overflow: hidden;
+    padding-right: 10px;
+    .menu-overlay {
+        right: 10px;
+        width: calc(100% - 10px);
+        width: -webkit-calc(100% - 10px);
+    }
+    .app--header {
+        width: calc(100% - 10px);
+        width: -webkit-calc(100% - 10px);
+    }
 }
 @media (min-width: $screen-md) {
     html ::-webkit-scrollbar {
@@ -945,7 +955,7 @@ body.nav-open {
                     cursor: text;
                     font-size: 1.125rem;
                     font-weight: $font-weight-bold;
-                    background-color: #0d0d0d;
+                    // background-color: #0d0d0d;
                     @include transition(top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in, background-color 0.2s);
                 }
                 .form-control:focus ~ .form-label,
@@ -955,6 +965,7 @@ body.nav-open {
                     left: 0.25rem;
                     z-index: 0;
                     color: $color-text-light;
+                    background-color: #111111;
                 }
             }
         }
@@ -1070,12 +1081,12 @@ body.nav-open {
                 }
                 @media (min-width: $screen-sm){
                     font-size: 46px;
-                    line-height: 60px;
+                    line-height: 62px;
                     display: inline-block;
                 }
                 @media (min-width: $screen-md){
                     font-size: 68px;
-                    line-height: 77px;
+                    line-height: 82px;
                     display: inline-block;
                 }
             }
